# taproot-assets

./: .gitignore  .gitmodules  .golangci.yml  .sqlfluff  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  chain_bridge.go  config.go  dev.Dockerfile  feature_bit_verifier.go  gen_signer.go  go.mod  go.sum  issue-875-plan.md  key_ring.go  listassets-pagination-progress.md  lnd_services.go  log.go  psbt_channel_funder.go  rpcserver.go  rpcserver_test.go  sample-tapd.conf  server.go  sqlc.yaml  supplysync_rpc.go  tajfi.Dockerfile  tmp_change_dsc.md  tx_validator.go  universe_rpc_diff.go  universe_rpc_registrar.go  version.go  virtual_tx_builder.go  virtual_tx_signer.go  wallet_anchor.go
.gemini/: styleguide.md
address/: address.go  address_test.go  bench_test.go  book.go  book_test.go  encoding.go  event.go  interface.go  log.go  mock.go  params.go  records.go  send.go
addressbook/: book.go  interface.go  log.go
asset/: asset.go  asset_test.go  bench_test.go  burn.go  burn_test.go  encoding.go  generators.go  group_key.go  group_key_reveal_test.go  group_key_test.go  interface.go  mock.go  records.go  records_test.go  tx.go  witness.go  witness_test.go
authmailbox/: authmailbox_server.go  client.go  client_test.go  log.go  marshal.go  message.go  mock.go  multi_subscription.go  receive_subscription.go  server.go  server_test.go  stream.go
backup/: backup.go  backup_test.go  encoding.go  export.go  hints.go  log.go  (+5 more)
tools/sqlfluff/sqlfluff_plugin_ref_type/: pyproject.toml
tools/sqlfluff/sqlfluff_plugin_ref_type/sqlfluff_plugin_ref_type/: __init__.py  rules.py
(+1392 files in other folders)
